--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "name": "cravecart-mobile",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "firebase": "latest",
-    "firebase-admin": "latest",
-    "lucide-react": "latest"
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "firebase": "10.8.0",
+    "lucide-react": "0.330.0"
   }
 }
