--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cravecart-mobile",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,10 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "firebase": "latest",
-    "lucide-react": "latest"
+    "next": "14.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "firebase": "10.8.0",
+    "lucide-react": "0.330.0",
+    "twilio": "4.23.0"
   }
 }
