--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "firebase": "10.8.0",
-    "lucide-react": "0.330.0",
-    "twilio": "4.23.0"
+    "lucide-react": "0.330.0"
   }
 }
